# DogeTracker

./: .gitignore  CMakeLists.txt  README.md  build.yml  build_linux.sh  config.json  push_to_github.sh  toolchain-lin.cmake  toolchain-mac.cmake  toolchain-mingw64.cmake
.github/workflows/: build.yml
DogeTracker.xcodeproj/: project.pbxproj
dogetracker/: CMakeLists.txt  README.md  build_platforms.sh  toolchain-mac.cmake
dogetracker/server/: package.json  server.js
dogetracker/server/public/: map.html
dogetracker/src/: main.cpp  tracker.cpp  tracker.h
dogetracker/src/include/: config.h
src/: config_reader.h  main.cpp  plugin.cpp  server.cpp  server.h
src/include/: appstate.cpp  config.h
web/: avitab.html  index.html  script.js  style.css
